# Chess

./: .gitignore  CMakeLists.txt  README.md  build.sh  index.md  installation.md  sdl2-config.cmake
headers/: Bishop.h  BoardState.h  Engine.h  Game.h  GameMenu.h  GameState.h  Gameboard.h  King.h  Knight.h  Menu.h  Pawn.h  Piece.h  Player.h  Queen.h  Rook.h  SoundManager.h  StateMachine.h  Structures.h  Test.h  Texture.h  TextureManager.h
notes/: MultiClassInheritance.md  Testing.md  draw.md  memleak.txt
src/: Bishop.cpp  Engine.cpp  Game.cpp  GameMenu.cpp  Gameboard.cpp  King.cpp  Knight.cpp  Main.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Queen.cpp  Rook.cpp  SoundManager.cpp  StateMachine.cpp  Test.cpp  Texture.cpp  TextureManager.cpp
